# bank_project

./: .gitignore  CMakeLists.txt  Readme.md  libraries.xml
app/: customers.c
